# 2d-movement-ai

./: CMakeCache.txt  CMakeLists.txt  Enitity.cpp  Makefile  build.sh  cmake_install.cmake  sdltest
src/: Engine.cpp  Engine.hpp  Enitity.cpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Params.hpp  Renderer.cpp  Renderer.hpp  Vector2.hpp  main.cpp
src/Core/: Engine.cpp  Engine.hpp
src/Entities/: Entity.hpp
src/Utils/: Vector2.hpp
